ros2_ws/log/build_2025-03-17_11-36-20/wall_follower/stderr.log
  File "/home/user/ros2_ws/install/wall_follower/lib/python3.8/site-packages/wall_follower/wall_following.py", line 44
    response = await self.client_call()
               ^
SyntaxError: 'await' outside async function

